# Vulkan_glfw_3D_engine

./: .gitignore
Phase2/: CMakeLists.txt
Phase2/resources/models/: bep.mtl
Phase2/resources/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
Phase2/resources/textures/: image_paths.txt
Phase2/source/: Graphics.cpp  Graphics.h  main.cpp
Vulkan2D/: BloodParticle.cpp  BloodParticle.h  BoundingBox.h  CollisionDetection.cpp  CollisionDetection.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Platform.cpp  Platform.h  Player.cpp  Player.h  SpriteSheet.cpp  SpriteSheet.h  Vertex.h  Vulkan2D.vcxproj  main.cpp
Vulkan2D/models/: bep.mtl  test0.mtl  texcube.mtl
Vulkan2D/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
Vulkan2D/textures/: image_paths.txt
